--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <head></head>
+
+  <body>
+    <h1>Books</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Body</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>入門git</td>
+          <tb>gitについての基本操作から内部構造まで解説してくれます</tb>
+          <tb><a>Show</a></tb>
+          <tb><a>Edit</a></tb>
+          <tb><a>Destroy</a></tb>
+        </tr>
+      </tbody>
+    </table>
+
+    <h2>New book</h2>
+  </body>
+</html>
