--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
- <head></head>
+ <head lang="ja">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="application.css">
+    <title>Bookers</title>
+  </head>
 
  <body>
   <h1>ようこそ <strong>Bookers</strong> へ！</h1>
