--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html>
-  <head></head>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="application.css">
+    <title>Bookers</title>
+  </head>
 
   <body>
     <h1>Books</h1>
@@ -15,11 +19,53 @@
 
       <tbody>
         <tr>
-          <td>入門git</td>
-          <tb>gitについての基本操作から内部構造まで解説してくれます</tb>
-          <tb><a>Show</a></tb>
-          <tb><a>Edit</a></tb>
-          <tb><a>Destroy</a></tb>
+          <td>リーダブルコード</td>
+          <td>より良いコードを書くためのシンプルで実践的なテクニック</td>
+          <td><a>Show</a></td>
+          <td><a>Edit</a></td>
+          <td><a>Destroy</a></td>
+        </tr>
+        <tr>
+          <td>トラブル知らずのシステム設計</td>
+          <td>システム設計の要点を図解で説明してくれます</td>
+          <td><a>Show</a></td>
+          <td><a>Edit</a></td>
+          <td><a>Destroy</a></td>
+        </tr>
+        <tr>
+          <td>たのしいRuby</td>
+          <td>Rubyの入門におすすめです</td>
+          <td><a>Show</a></td>
+          <td><a>Edit</a></td>
+          <td><a>Destroy</a></td>
+        </tr>
+        <tr>
+          <td>入門Git</td>
+          <td>gitについての基本操作から内部構造まで解説してくれます</td>
+          <td><a>Show</a></td>
+          <td><a>Edit</a></td>
+          <td><a>Destroy</a></td>
+        </tr>
+        <tr>
+          <td>アルゴリズム図鑑</td>
+          <td>アルゴリズムについてカラーイラストでしっかり解説してくれます</td>
+          <td><a>Show</a></td>
+          <td><a>Edit</a></td>
+          <td><a>Destroy</a></td>
+        </tr>
+        <tr>
+          <td>達人プログラマー</td>
+          <td>プログラマ入門者は必読！</td>
+          <td><a>Show</a></td>
+          <td><a>Edit</a></td>
+          <td><a>Destroy</a></td>
+        </tr>
+        <tr>
+          <td>データベース実践入門</td>
+          <td>効率的なSQL文を教えてくれます</td>
+          <td><a>Show</a></td>
+          <td><a>Edit</a></td>
+          <td><a>Destroy</a></td>
         </tr>
       </tbody>
     </table>
