--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -67,9 +67,23 @@
           <td><a>Edit</a></td>
           <td><a>Destroy</a></td>
         </tr>
+        <tr>
+          <% @books.each do |book| %>
+          <td><span><%= book.title %></span></td>
+          <td><span><%= book.body %></span></td>
+          <% end %>
+        </tr>
       </tbody>
     </table>
 
     <h2>New book</h2>
+    <%= form_with model: @book, url:'/books', local:true do |f| %>
+      <h4>Title</h4>
+      <%= f.text_field :title %>
+      <h4>Body</h4>
+      <%= f.text_area :body %>
+      <%= f.submit 'Create Book' %>
+    <% end %>
   </body>
 </html>
+
