--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="application.css">
+    <title>Bookers</title>
+  </head>
+  
+  <body>
+    <p id="notice">Book was successfully created.</p>
+    <p>
+      <strong>Title:</strong>
+      <%= @book.title %>
+    </p>
+    <p>
+      <strong>Body</strong>
+      <%= @book.body %>
+    </p>
+    
+
+  </body>
+</html>
