--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
- <head lang="ja">
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="application.css">
-    <title>Bookers</title>
+<html lang="ja">
+  <head>
+   <meta charset="UTF-8">
+   <link rel="stylesheet" href="application.css">
+   <title>Bookers</title>
   </head>
 
- <body>
-  <h1>ようこそ <strong>Bookers</strong> へ！</h1>
-  <P><strong>Bookers</strong> では、さまざまな書籍に関するあなたの意見や</P>
-  <p>印象を共有し交換することができます</p>
-  <p><a href="/books">start</a></p>
- </body>
+  <body>
+   <h1>ようこそ <strong>Bookers</strong> へ！</h1>
+   <P><strong>Bookers</strong> では、さまざまな書籍に関するあなたの意見や</P>
+   <p>印象を共有し交換することができます</p>
+   <p><a href="/books">start</a></p>
+  </body>
 </html>
