--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -69,8 +69,8 @@
         </tr>
         <tr>
           <% @books.each do |book| %>
-          <td><span><%= book.title %></span></td>
-          <td><span><%= book.body %></span></td>
+          <td><%= book.title %></td>
+          <td><%= book.body %></td>
           <% end %>
         </tr>
       </tbody>
