--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,63 +16,16 @@
           <th colspan="3"></th>
         </tr>
       </thead>
-
       <tbody>
-        <tr>
-          <td>リーダブルコード</td>
-          <td>より良いコードを書くためのシンプルで実践的なテクニック</td>
-          <td><a>Show</a></td>
-          <td><a>Edit</a></td>
-          <td><a>Destroy</a></td>
-        </tr>
-        <tr>
-          <td>トラブル知らずのシステム設計</td>
-          <td>システム設計の要点を図解で説明してくれます</td>
-          <td><a>Show</a></td>
-          <td><a>Edit</a></td>
-          <td><a>Destroy</a></td>
-        </tr>
-        <tr>
-          <td>たのしいRuby</td>
-          <td>Rubyの入門におすすめです</td>
-          <td><a>Show</a></td>
-          <td><a>Edit</a></td>
-          <td><a>Destroy</a></td>
-        </tr>
-        <tr>
-          <td>入門Git</td>
-          <td>gitについての基本操作から内部構造まで解説してくれます</td>
-          <td><a>Show</a></td>
-          <td><a>Edit</a></td>
-          <td><a>Destroy</a></td>
-        </tr>
-        <tr>
-          <td>アルゴリズム図鑑</td>
-          <td>アルゴリズムについてカラーイラストでしっかり解説してくれます</td>
-          <td><a>Show</a></td>
-          <td><a>Edit</a></td>
-          <td><a>Destroy</a></td>
-        </tr>
-        <tr>
-          <td>達人プログラマー</td>
-          <td>プログラマ入門者は必読！</td>
-          <td><a>Show</a></td>
-          <td><a>Edit</a></td>
-          <td><a>Destroy</a></td>
-        </tr>
-        <tr>
-          <td>データベース実践入門</td>
-          <td>効率的なSQL文を教えてくれます</td>
-          <td><a>Show</a></td>
-          <td><a>Edit</a></td>
-          <td><a>Destroy</a></td>
-        </tr>
-        <tr>
-          <% @books.each do |book| %>
-          <td><%= book.title %></td>
-          <td><%= book.body %></td>
-          <% end %>
-        </tr>
+        <% @books.each do |book| %>
+          <tr>
+            <td><%= book.title %></td>
+            <td><%= book.body %></td>
+            <td><%= link_to "Show", book_path(book) %></td>
+            <td><%= link_to "Edit", edit_book_path(book) %></td>
+            <td></td>
+          </tr>
+        <% end %>
       </tbody>
     </table>
 
