--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,8 @@
+<% if flash[:notice] %>
+    <div class="alert alert-primary" role="alert">
+        <%= notice %>
+    </div>
+<% end %>
 <h1>Editing Book</h1>
 <%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
   <h4>Title</h4>
