--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,7 +23,7 @@
             <td><%= book.body %></td>
             <td><%= link_to "Show", book_path(book) %></td>
             <td><%= link_to "Edit", edit_book_path(book) %></td>
-            <td></td>
+            <td><%= link_to "Destroy", book_path(book), method: :delete, data: { confirm: 'Are you sure?' } %></td>
           </tr>
         <% end %>
       </tbody>
@@ -31,6 +31,12 @@
 
     <h2>New book</h2>
     <%= form_with model: @book, url:'/books', local:true do |f| %>
+      <% if book.errors.any? %>
+        <%= book.errors.count %> errors prohibited this book from being saved:
+        <% book.errors.full_messages.each do |message| %>
+          <%= message %>
+        <% end %>
+    <% end %>
       <h4>Title</h4>
       <%= f.text_field :title %>
       <h4>Body</h4>
