--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -5,6 +5,12 @@
 <% end %>
 <h1>Editing Book</h1>
 <%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
+    <% if @book.errors.any? %>
+        <%= @book.errors.count %> errors prohibited this book from being saved:
+        <% @book.errors.full_messages.each do |message| %>
+          <%= message %>
+        <% end %>
+    <% end %>
   <h4>Title</h4>
   <%= f.text_field :title %>
   <h4>Body</h4>
@@ -13,4 +19,4 @@
 <% end %>
 <%= link_to "Show", book_path(@book.id) %>
 |
-<%= link_to "Back", books_path(@book.id) %>
+<%= link_to "Back", books_path %>
