--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -31,9 +31,9 @@
 
     <h2>New book</h2>
     <%= form_with model: @book, url:'/books', local:true do |f| %>
-      <% if book.errors.any? %>
-        <%= book.errors.count %> errors prohibited this book from being saved:
-        <% book.errors.full_messages.each do |message| %>
+      <% if @book.errors.any? %>
+        <%= @book.errors.count %> errors prohibited this book from being saved:
+        <% @book.errors.full_messages.each do |message| %>
           <%= message %>
         <% end %>
     <% end %>
